Fix style linking

--- a/challenges/kevin-powell-last-challenge/index.html
+++ b/challenges/kevin-powell-last-challenge/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Responsive Layouts!</title>
 
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
@@ -75,7 +75,7 @@
         dolore ma gna aliqua. Ut enim a d minim veniam. Lorem ipsum dolor sit am et, consectetur a dipiscin g elit, sed
         do
         eiusm od tempor in cididunt ut labore et dolore ma gna aliqua. Ut enim a d minim veniam.</p>
-      <img src="/assets/img.jpg" alt="design iterrations on pen and paper">
+      <img src="./assets/img.jpg" alt="design iterrations on pen and paper">
       <p>Lorem ipsum dolor sit am et, consectetur a dipiscin g elit, sed do eiusm od tempor in cididunt ut labore et
         dolore ma gna aliqua. Ut enim a d minim veniam. Lorem ipsum dolor sit am et, consectetur a dipiscin g elit, sed
         do
