--- a/svelte-playground/click-counter/index.html
+++ b/svelte-playground/click-counter/index.html
@@ -6,11 +6,11 @@
 
 	<title>Svelte app</title>
 
-	<link rel='icon' type='image/png' href='https://fuckchro.me/svelte-playground/click-counter/favicon.png'>
-	<link rel='stylesheet' href='https://fuckchro.me/svelte-playground/click-counter/global.css'>
-	<link rel='stylesheet' href='https://fuckchro.me/svelte-playground/click-counter/build/bundle.css'>
+	<link rel='icon' type='image/png' href='./favicon.png'>
+	<link rel='stylesheet' href='./global.css'>
+	<link rel='stylesheet' href='./bundle.css'>
 
-	<script defer src='https://fuckchro.me/svelte-playground/click-counter/build/bundle.js'></script>
+	<script defer src='./bundle.js'></script>
 </head>
 
 <body>
