--- a/FreeCodeCamp/Product-Landing-Page/index.html
+++ b/FreeCodeCamp/Product-Landing-Page/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <header id="header">
-        <a href="/">
-            <img src="/acme-logo.svg" alt="Logo" id="header-img">
+        <a href="./">
+            <img src="./acme-logo.svg" alt="Logo" id="header-img">
         </a>
         <nav id="nav-bar">
             <a href="#Our-Mission" class="nav-link">Our Mission</a>
