link and a tag fix

--- a/referral/About/index.html
+++ b/referral/About/index.html
@@ -11,7 +11,7 @@
     <title>BRW - About</title>
     <meta name="description" content="BRW - bLaCkwEw's Referral Website - About">
 
-    <link rel="stylesheet" href="https://blackwew.github.io/referral/index.css">
+    <link rel="stylesheet" href="../index.css">
     <link rel="icon" type="image/icon" href="favicon.ico">
 
 </head>
@@ -19,12 +19,12 @@
 <body>
 
     <header class="header">
-        <h1 class="logo"><a href="https://blackwew.github.io/referral/">BRW</a></h1>
+        <h1 class="logo"><a href="./">BRW</a></h1>
 
         <ul class="main-nav">
-            <li><a href="https://blackwew.github.io/referral/">Home</a></li>
-            <li><a href="https://blackwew.github.io/referral/About">About</a></li>
-            <li><a href="https://blackwew.github.io/referral/Contact">Contact</a></li>
+            <li><a href="./">Home</a></li>
+            <li><a href="./About">About</a></li>
+            <li><a href="./Contact">Contact</a></li>
         </ul>
     </header>
 
@@ -115,7 +115,7 @@
 
     <footer>
         <a href="https://blackwew.github.io">bLaCkwEw</a>
-        <a href="https://blackwew.github.io/referral/privacy.html">Privacy Policy</a>
+        <a href="../privacy.html">Privacy Policy</a>
         <a href="https://blackwew.github.io/sitemap.html">Sitemap</a>
     </footer>
 
