--- a/referral/index.html
+++ b/referral/index.html
@@ -20,7 +20,7 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="<!-- Image Link -->">
 
-    <link rel="stylesheet" href="https://blackwew.github.io/referral/index.css">
+    <link rel="stylesheet" href="/index.css">
     <!-- <link rel="icon" type="image/icon" href="favicon.ico"> -->
 
 </head>
@@ -28,12 +28,12 @@
 <body>
 
     <header class="header">
-        <h1 class="logo"><a href="https://blackwew.github.io/referral/">BRW</a></h1>
+        <h1 class="logo"><a href="./">BRW</a></h1>
 
         <ul class="main-nav">
-            <li><a href="https://blackwew.github.io/referral/">Home</a></li>
-            <li><a href="https://blackwew.github.io/referral/About">About</a></li>
-            <li><a href="https://blackwew.github.io/referral/Contact">Contact</a></li>
+            <li><a href="./">Home</a></li>
+            <li><a href="./About">About</a></li>
+            <li><a href="./Contact">Contact</a></li>
         </ul>
     </header>
 
@@ -210,7 +210,7 @@
 
     <footer>
         <a href="https://blackwew.github.io">bLaCkwEw</a>
-        <a href="https://blackwew.github.io/referral/privacy.html">Privacy Policy</a>
+        <a href="./privacy.html">Privacy Policy</a>
         <a href="https://blackwew.github.io/sitemap.html">Sitemap</a>
     </footer>
 
