--- a/referral/privacy.html
+++ b/referral/privacy.html
@@ -11,7 +11,7 @@
     <title>BRW - Privacy Policy</title>
     <meta name="description" content="BRW - bLaCkwEw's Referral Website - Privacy Policy!">
 
-    <link rel="stylesheet" href="https://blackwew.github.io/referral/index.css">
+    <link rel="stylesheet" href="./index.css">
     <link rel="icon" type="image/icon" href="favicon.ico">
 
 </head>
