--- a/referral/index.html
+++ b/referral/index.html
@@ -20,7 +20,7 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="<!-- Image Link -->">
 
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="./index.css">
     <!-- <link rel="icon" type="image/icon" href="favicon.ico"> -->
 
 </head>
