--- a/smoking-price-calculator/index.html
+++ b/smoking-price-calculator/index.html
@@ -23,7 +23,7 @@
       property="og:description"
       content="Find out how much your smoking habit is going to cost you throughout your life."
     />
-    <meta property="og:image" content="/thumb.webp" />
+    <meta property="og:image" content="./thumb.webp" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -36,10 +36,10 @@
       property="twitter:description"
       content="Find out how much your smoking habit is going to cost you throughout your life."
     />
-    <meta property="twitter:image" content="/thumb.webp" />
-    <script type="module" crossorigin src="/assets/index.309db346.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.891c2c6f.js">
-    <link rel="stylesheet" href="/assets/index.9d448349.css">
+    <meta property="twitter:image" content="./thumb.webp" />
+    <script type="module" crossorigin src="./assets/index.309db346.js"></script>
+    <link rel="modulepreload" href="./assets/vendor.891c2c6f.js">
+    <link rel="stylesheet" href="./assets/index.9d448349.css">
   </head>
 
   <body>
